UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/ftr_VOIP_Qualification__c.object-meta.xml
<CustomObject>
    <label>ftr_VOIP_Qualification</label>
    <nameField>
        <displayFormat>VOIPQUAL{0000}</displayFormat>
        <label>VOIP_Qualification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ftr_VOIP_Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>