UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/Available_VOIP__c.field-meta.xml
<CustomField>
    <fullName>Available_VOIP__c</fullName>
    <label>Available VOIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>