UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/E911_Type__c.field-meta.xml
<CustomField>
    <fullName>E911_Type__c</fullName>
    <label>E911 Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>