UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/IsThirdParty__c.field-meta.xml
<CustomField>
    <fullName>IsThirdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party?</label>
    <type>Checkbox</type>
</CustomField>