UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>