UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/Local_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Local_Routing_Number__c</fullName>
    <label>Local Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>