UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/NXX__c.field-meta.xml
<CustomField>
    <fullName>NXX__c</fullName>
    <label>NXX</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>