UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/OCN__c.field-meta.xml
<CustomField>
    <fullName>OCN__c</fullName>
    <label>OCN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>