UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_VOIP_Qualification__c/fields/ServiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>ServiceAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ftr_VOIP_Qualifications</relationshipLabel>
    <relationshipName>ftr_VOIP_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>